--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,28 +5,28 @@ on:
   push:
     branches: [main, dev]
   pull_request:
-    branches: [main, dev]      # roda testes/build sem deploy
+    branches: [main, dev] # roda testes/build sem deploy
   workflow_dispatch:
 
 env:
   # ── Stage ────────────────────────────────────────────────────────
-  CLUSTER_STAGE:       app-chamada-stage
-  CLUSTER_STAGE_ZONE:  us-west1-a
-  PROJECT_ID_STAGE:    app-chamada-stage
-  NAMESPACE_STAGE:     stage-app-presente
+  CLUSTER_STAGE: app-chamada-stage
+  CLUSTER_STAGE_ZONE: us-west1-a
+  PROJECT_ID_STAGE: app-chamada-stage
+  NAMESPACE_STAGE: stage-app-presente
   # ── Prod ─────────────────────────────────────────────────────────
-  CLUSTER_PROD:        app-prod-fa395f7c
-  CLUSTER_PROD_ZONE:   us-central1-a
-  PROJECT_ID_PROD:     app-chamada-5706
-  NAMESPACE_PROD:      app-chamada-production
+  CLUSTER_PROD: app-prod-fa395f7c
+  CLUSTER_PROD_ZONE: us-central1-a
+  PROJECT_ID_PROD: app-chamada-5706
+  NAMESPACE_PROD: app-chamada-production
   # ── Comum ───────────────────────────────────────────────────────
-  DEPLOYMENT_NAME:     app-presente-front
-  DOCKER_IMAGE:        guilherme310402/app_presente_front
+  DEPLOYMENT_NAME: app-presente-front
+  DOCKER_IMAGE: guilherme310402/app_presente_front
 
 jobs:
-# ───────────────────────────────────────────────────────────────────
-# 1) TESTES
-# ───────────────────────────────────────────────────────────────────
+  # ───────────────────────────────────────────────────────────────────
+  # 1) TESTES
+  # ───────────────────────────────────────────────────────────────────
   test:
     runs-on: ubuntu-latest
     steps:
@@ -37,9 +37,9 @@ jobs:
       - run: npm run lint
       - run: npm test
 
-# ───────────────────────────────────────────────────────────────────
-# 2) BUILD & PUSH (Docker Hub)
-# ───────────────────────────────────────────────────────────────────
+  # ───────────────────────────────────────────────────────────────────
+  # 2) BUILD & PUSH (Docker Hub)
+  # ───────────────────────────────────────────────────────────────────
   build:
     needs: test
     runs-on: ubuntu-latest
@@ -47,6 +47,15 @@ jobs:
       image_tag: ${{ steps.prep.outputs.tag }}
     steps:
       - uses: actions/checkout@v4
+
+      - name: Set BACKEND_API_HOST based on branch
+        id: set-backend-host
+        run: |
+          if [[ "${GITHUB_REF##*/}" == "main" ]]; then
+            echo "BACKEND_API_HOST=http://app-presente-back-service.app-chamada-production.svc.cluster.local" >> $GITHUB_ENV
+          else
+            echo "BACKEND_API_HOST=http://app-presente-back-service.stage-app-presente.svc.cluster.local" >> $GITHUB_ENV
+          fi
 
       - name: Prepare tag
         id: prep
@@ -73,10 +82,10 @@ jobs:
             ${{ env.DOCKER_IMAGE }}:${{ steps.prep.outputs.tag }}
             ${{ env.DOCKER_IMAGE }}:latest
           cache-from: type=gha
-          cache-to:   type=gha,mode=max
-# ───────────────────────────────────────────────────────────────────
-# 3) DEPLOY STAGE  (push → dev)          ★  APENAS ESTE BLOCO MUDOU
-# ───────────────────────────────────────────────────────────────────
+          cache-to: type=gha,mode=max
+  # ───────────────────────────────────────────────────────────────────
+  # 3) DEPLOY STAGE  (push → dev)          ★  APENAS ESTE BLOCO MUDOU
+  # ───────────────────────────────────────────────────────────────────
   deploy-stage:
     if: github.event_name == 'push' && github.ref == 'refs/heads/dev'
     needs: build
@@ -120,9 +129,9 @@ jobs:
           kubectl rollout status deployment/${{ env.DEPLOYMENT_NAME }} \
             -n "${{ env.NAMESPACE_STAGE }}" --timeout=300s
 
-# ───────────────────────────────────────────────────────────────────
-# 4) DEPLOY PROD   (push → main)
-# ───────────────────────────────────────────────────────────────────
+  # ───────────────────────────────────────────────────────────────────
+  # 4) DEPLOY PROD   (push → main)
+  # ───────────────────────────────────────────────────────────────────
   deploy-prod:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     needs: build
