--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next": "^14.2.3",
     "next-iron-session": "^4.2.0",
     "postcss": "^8.4.31",
+    "prom-client": "^15.1.3",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-cookie": "^8.0.1",
