--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -52,9 +52,9 @@ jobs:
         id: set-backend-host
         run: |
           if [[ "${GITHUB_REF##*/}" == "main" ]]; then
-            echo "BACKEND_API_HOST=http://app-presente-back-service.app-chamada-production.svc.cluster.local" >> $GITHUB_ENV
+            echo "BACKEND_API_HOST=http://app-presente-back-service.app-chamada-production.svc.cluster.local:8000/api/:path*" >> $GITHUB_ENV
           else
-            echo "BACKEND_API_HOST=http://app-presente-back-service.stage-app-presente.svc.cluster.local" >> $GITHUB_ENV
+            echo "BACKEND_API_HOST=http://app-presente-back-service.stage-app-presente.svc.cluster.local:8000/api/:path*" >> $GITHUB_ENV
           fi
 
       - name: Prepare tag
@@ -66,7 +66,8 @@ jobs:
       - run: npm ci
       - run: npm run build
         env:
-          NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
+          NEXT_PUBLIC_API_URL: ${{ env.BACKEND_API_HOST }}
+
 
       - uses: docker/setup-buildx-action@v3
       - uses: docker/login-action@v3
