--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 env:
-  # ── Stage ────────────────────────────────────────────────────────
+  # ── Stage ─────────────────────────────-───────────────────────────
   CLUSTER_STAGE: app-chamada-stage
   CLUSTER_STAGE_ZONE: us-west1-a
   PROJECT_ID_STAGE: app-chamada-stage
